--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  text-align: center;
+/* .App {
+  background-color: #282c34;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +36,17 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.node__root > circle {
+  fill: red;
+}
+
+.node__branch > circle {
+  fill: yellow;
+}
+
+.node__leaf > circle {
+  fill: green;
+  /* Let's also make the radius of leaf nodes larger */
 }
